# OTPEncryption

./: Cargo.toml  README.md
src/: encrypt.rs  generate_keys.rs
unit_tests/: unit_test_01.rs  unit_test_02.rs  unit_test_03.rs
